get students algorithm is implemented